--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ padding-left: 50px;
   text-decoration-color: #FA9149;
 }
 
+
 @media(max-width: 650px){
   .titulo-logo, .menu-nav li, .idioma a {
     font-size: 1em;
@@ -111,8 +112,8 @@ padding-left: 50px;
   margin: 0;
   }
 }
-@media screen and (max-width: 1024px) {
-  .container {
+@media screen and (min-width: 375px) {
+  .paraOnde__background {
     background-color: white;
   }
 }
@@ -130,6 +131,7 @@ padding-left: 50px;
 .navbar-brand ul{
   display: flex;
   flex-wrap: wrap;
+  margin-left: 84px;
   margin-top: 84px;
   margin-bottom: 27px;
   justify-content: space-between;
@@ -165,6 +167,11 @@ padding-left: 50px;
   fill: #FA9149;
 }
 
+@media screen and (min-width: 375px) {
+  .paraOnde__background {
+    background-color: white;
+  }
+}
 .paraOnde__background{
   background-image: url(./img/bannerDesktop.png);
   width: 100%;
@@ -196,6 +203,10 @@ padding-left: 50px;
   height: 36px;
 }
 
+.paraOnde__label input:hover{
+  cursor: pointer;
+}
+
 .paraOnde__label img{
   width: 20px;
   position: absolute;
@@ -213,4 +224,182 @@ padding-left: 50px;
 
 .conheca{
   margin-top: 33px;
+}
+
+.btn-secondary{
+  background-color: transparent;
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 1px;
+  padding: 9px;
+  text-decoration: none;
+  color: black;
+  margin: 0;
+  font-size: 16px;
+}
+
+.btn-secondary:hover{
+  border-color: #FA9149;
+  color: #FA9149;
+  background-color: white;
+}
+
+
+@media(max-width: 650px){
+  .conheca {
+    min-width: 375px;
+  }
+}
+.conheca img{
+  width: 100%;
+  height: 495px;
+}
+
+.titulo h4{
+  width: 100%;
+  font-weight: 600;
+  line-height: 60px;
+  margin-bottom: -10px;
+}
+.titulo p{
+  width: 100%;
+  font-weight: 400;
+  line-height: 30px;
+  padding-bottom: 10px;
+}
+
+.titulo{
+  width: 1110px;
+  height: 120px;
+  position: absolute;
+  padding-left: 10px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.574);
+  text-align: left;
+  display: inline;
+  transform: translateY(313%);
+}
+
+.button{
+  border: 2px solid black;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  padding-top: 2px;
+  margin-left: 850px;
+  z-index: 1;
+  transform: translateY(-300%);
+  margin-top: 75px;
+}
+
+.button p{
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 6px;
+}
+
+.button:hover{
+  background-color: #737070; 
+  border: 1px solid #6f6f6f;
+  color: white;
+  transition-duration: .3s;
+}
+
+.container2{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+h3{
+  margin-left: 570px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  font-weight: bold;
+}
+
+.card{
+  margin-top: 5px;
+  margin: 20px;
+}
+
+h5{
+  font-weight: bold;
+}
+
+.card-preço{
+  font-weight: bold;
+}
+
+h3{
+  margin-left: 570px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  font-weight: bold;
+}
+
+.card-rest{
+  margin-top: 5px;
+  margin: 20px;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: 2px;
+}
+
+.estrelas path{
+  color: #FA9149;
+}
+
+h5{
+  font-weight: bold;
+}
+
+.card-preço{
+  font-weight: bold;
+}
+
+footer {
+  width: 100%;
+  height: auto;
+  background-color: #3B5C37;
+  color: white;
+
+
+}
+
+footer h3 {
+  font-size: 19px;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+
+.rodape {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logo-rodape {
+  display: flex;
+  align-items: center;
+  margin: 20px 30px;
+
+}
+
+.icon-footer {
+  width: 30px;
+  margin: 0 3px;
+  padding-top: 11px;
+  padding-bottom: 10px;
+}
+
+.logo-rodape img {
+  width: 60px;
+}
+
+.redes-sociais {
+  margin: 20px 30px;
 }
